--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/touv/node-ezs-basics#readme",
   "dependencies": {
+    "JSONStream": "^1.3.1",
     "csv-string": "^2.3.2",
     "flat": "^2.0.1",
     "jbj": "^7.1.4",
