--- a/package.json
+++ b/package.json
@@ -1,54 +1,55 @@
 {
-	"name": "ezs-basics",
-	"version": "2.3.0",
-	"description": "Basics statements form EZS",
-	"directories": {
-		"test": "test"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/touv/node-ezs-basics.git"
-	},
-	"keywords": [
-		"ezs"
-	],
-	"author": "Nicolas Thouvenin <nthouvenin@gmail.com>",
-	"license": "MIT",
-	"bugs": {
-		"url": "https://github.com/touv/node-ezs-basics/issues"
-	},
-	"homepage": "https://github.com/touv/node-ezs-basics#readme",
-	"dependencies": {
-		"JSONStream": "^1.3.1",
-		"csv-string": "^2.3.2",
-		"flat": "^2.0.1",
-		"tmp-filepath": "^2.0.0",
-		"xml-splitter": "^1.2.1"
-	},
-	"main": "./lib/index.js",
-	"scripts": {
-		"test": "istanbul test ./node_modules/.bin/_mocha -- -R spec",
-		"lint": "eslint --ext=.js ./test/*.js ./src/*.js",
-		"build": "babel src --out-dir lib",
-		"prepublish": "npm run build",
-		"pretest": "npm run build"
-	},
-	"devDependencies": {
-		"babel-cli": "^6.24.1",
-		"babel-eslint": "^7.2.1",
-		"babel-preset-es2015": "^6.24.1",
-		"babel-preset-stage-3": "^6.24.1",
-		"caporal": "^0.5.0",
-		"chai": "^3.5.0",
-		"eslint": "^3.19.0",
-		"eslint-config-airbnb": "^14.1.0",
-		"eslint-plugin-import": "^2.2.0",
-		"eslint-plugin-jsx-a11y": "^4.0.0",
-		"eslint-plugin-react": "^6.10.3",
-		"istanbul": "^0.4.5",
-		"mocha": "^3.2.0"
-	},
-	"peerDependencies": {
-        "ezs": "^2.0.0"
-    }
+  "name": "ezs-basics",
+  "version": "2.3.0",
+  "description": "Basics statements form EZS",
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/touv/node-ezs-basics.git"
+  },
+  "keywords": [
+    "ezs"
+  ],
+  "author": "Nicolas Thouvenin <nthouvenin@gmail.com>",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/touv/node-ezs-basics/issues"
+  },
+  "homepage": "https://github.com/touv/node-ezs-basics#readme",
+  "dependencies": {
+    "JSONStream": "^1.3.1",
+    "csv-string": "^2.3.2",
+    "flat": "^2.0.1",
+    "request": "^2.81.0",
+    "tmp-filepath": "^2.0.0",
+    "xml-splitter": "^1.2.1"
+  },
+  "main": "./lib/index.js",
+  "scripts": {
+    "test": "istanbul test ./node_modules/.bin/_mocha -- -R spec",
+    "lint": "eslint --ext=.js ./test/*.js ./src/*.js",
+    "build": "babel src --out-dir lib",
+    "prepublish": "npm run build",
+    "pretest": "npm run build"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-eslint": "^7.2.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
+    "caporal": "^0.5.0",
+    "chai": "^3.5.0",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.10.3",
+    "istanbul": "^0.4.5",
+    "mocha": "^3.2.0"
+  },
+  "peerDependencies": {
+    "ezs": "^3.0.0"
+  }
 }
