--- a/package.json
+++ b/package.json
@@ -46,8 +46,10 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.3",
+    "ezs": "^4.3.1",
+    "from": "^0.1.7",
     "istanbul": "^0.4.5",
-    "mocha": "^3.2.0"
+    "mocha": "^3.5.3"
   },
   "peerDependencies": {
     "ezs": "^4.0.0"
