--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
   },
   "homepage": "https://github.com/touv/node-ezs-basics#readme",
   "dependencies": {
-    "JSONStream": "^1.3.1",
-    "csv-string": "^2.3.2",
-    "flat": "^2.0.1",
-    "request": "^2.81.0",
-    "tmp-filepath": "^2.0.0",
-    "xml-splitter": "^1.2.1"
+    "JSONStream": "1.3.1",
+    "csv-string": "2.3.3",
+    "flat": "2.0.1",
+    "request": "2.81.0",
+    "tmp-filepath": "2.0.0",
+    "xml-splitter": "1.2.1"
   },
   "main": "./lib/index.js",
   "scripts": {
