--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
   "dependencies": {
     "JSONStream": "1.3.1",
     "csv-string": "3.1.2",
+    "fetch-with-proxy": "1.1.0",
     "flat": "2.0.1",
-    "request": "2.81.0",
+    "isomorphic-fetch": "2.2.1",
     "tmp-filepath": "2.0.0",
     "xml-splitter": "1.2.1"
   },
