--- a/package.json
+++ b/package.json
@@ -42,9 +42,7 @@
     "babel-eslint": "^7.2.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
-    "caporal": "^0.5.0",
-    "chai": "^3.5.0",
-    "documentation": "5.3.5",
+    "documentation": "8.1.2",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-import": "^2.2.0",
@@ -53,9 +51,9 @@
     "ezs": "^5.3.7",
     "from": "^0.1.7",
     "istanbul": "^0.4.5",
-    "mocha": "^3.5.3"
+    "mocha": "5.2.0"
   },
   "peerDependencies": {
-    "ezs": "^5.3.7"
+    "ezs": "*"
   }
 }
