--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
     "documentation": "8.1.2",
-    "eslint": "^3.19.0",
+    "eslint": "5.15.3",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
