--- a/examples/url-stream.ini
+++ b/examples/url-stream.ini
@@ -16,6 +16,16 @@ target = documents
 url = https://api.istex.fr/document/
 path = hits.*
 
+[drop]
+path = abstract
+
+[keep]
+path = language
+path = abstract
+
+[assign]
+path = language
+value = get('language').head()
 
 [dump]
 
